# hands-free-chess-clock

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  test.sh
.github/workflows/: main.yml
src/: audio_capture.cpp  audio_capture.hpp  audio_playback.cpp  audio_playback.hpp  chess_engine.cpp  chess_engine.hpp  command_parser.cpp  command_parser.hpp  control_loop.cpp  display.cpp  display.hpp  game.cpp  game.hpp  logger.cpp  logger.hpp  main.cpp  mpscq.cpp  mpscq.hpp  openings.cpp  openings.hpp  process.cpp  process.hpp  speech_to_text.cpp  speech_to_text.hpp  stockfish.cpp  stockfish.hpp  text_to_speech.cpp  text_to_speech.hpp  uci.cpp  uci.hpp  vad.cpp  vad.hpp  video_capture.cpp  video_capture.hpp
test/: chess_engine_test.hpp  openings_test.hpp  uci_test.hpp  unit_tests.cpp  video_capture_test.hpp
test/openings/: a.tsv
